--- a/config_sample.env
+++ b/config_sample.env
@@ -1,40 +1,38 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5392467929:AAF1iGMMbm4-ODWSJ--NtKp06vuTX-IpOX4"
+GDRIVE_FOLDER_ID = "1-xNTgXmjyciWMSc_w4CCP8iah0o8xBzo"
+OWNER_ID =2113726835
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API =12411512
+TELEGRAM_HASH = "0417d4f5fa67431b3c1b984a712cdbe3"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "-1001792133453 -1001562755933"
 SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
+IGNORE_PENDING_REQUESTS = "False"
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+INDEX_URL = "https://kristycloud.tk/0:/Kristys%20Mir%20Uploads/"
+STATUS_LIMIT = "4"
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENTION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/Im-Kristy2/leech-kc"
+UPSTREAM_BRANCH = "master"
 # Leech
 TG_SPLIT_SIZE = ""
-AS_DOCUMENT = ""
+AS_DOCUMENT = "True"
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
 BASE_URL_OF_BOT = ""
-SERVER_PORT = ""
+SERVER_PORT = "79:79"
 WEB_PINCODE = ""
 QB_SEED = ""
 # Rss
@@ -49,14 +47,14 @@ MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "mV8nSKDL"
+MEGA_EMAIL_ID = "kristykris236@gmail.com"
+MEGA_PASSWORD = "12345kristy@kristy"
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
 # GDTOT COOKIE
-CRYPT = ""
+CRYPT = "WjFlQnJudjNaZW5WR2l6MVJmOXUzWVI0WWV4b1VpWHB2eHhrbEpLTnNmND0%3D"
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
@@ -64,7 +62,7 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
