--- a/config_sample.env
+++ b/config_sample.env
@@ -20,7 +20,7 @@ STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
-EXTENTION_FILTER = ""
+EXTENTION_FILTER = ".mkv"
 INCOMPLETE_TASK_NOTIFIER = "True"
 # Update
 UPSTREAM_REPO = "https://github.com/Im-Kristy2/leech-kc"
@@ -47,8 +47,8 @@ MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = "mV8nSKDL"
-MEGA_EMAIL_ID = "kristykris236@gmail.com"
+MEGA_API_KEY = "nUtABCBa"
+MEGA_EMAIL_ID = "cheranadhi5g@gmail.com"
 MEGA_PASSWORD = "12345kristy@kristy"
 # Shortener
 SHORTENER = ""
